# mlops_2806

./: .gitignore  README.md  app.py  model.joblib  pyproject.toml  requirements.txt  test_pipeline.py  vectorizer.joblib
.github/workflows/: mlops.yml
data/: tweets copy 2.csv  tweets copy.csv  tweets.csv  tweets_limpo.csv
notebooks/: 01_exploracao.ipynb  02_pipeline_validacao_pandas.ipynb  03_deploy_streamlit.ipynb  04_monitorar_fairness.ipynb
