[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-expectations>=0.18.22",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
]
